Backport sources to Java 8
Kinda like how `SingleInstanceServiceLoader` turned out... Might do something similar in newer versions too 🤔