@@ -1,9 +1,6 @@
 package net.xolt.freecam.variant.api;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.ServiceLoader;
+import java.util.*;
 
 class SingleInstanceServiceLoader {
 
@@ -11,26 +8,27 @@ class SingleInstanceServiceLoader {
 
     static <T> T get(Class<T> type) {
         return type.cast(SERVICE_PROVIDERS.computeIfAbsent(type, key -> {
-            List<ServiceLoader.Provider<T>> providers = ServiceLoader.load(type).stream().toList();
+            T value = null;
+            List<String> names = new ArrayList<>();
 
-            if (providers.isEmpty()) {
-                String message = "Could not find any service providers for %s".formatted(type.getSimpleName());
+            for (T service : ServiceLoader.load(type)) {
+                value = service;
+                names.add(service.getClass().getSimpleName());
+            }
+
+            if (value == null) {
+                String message = String.format("Could not find any service providers for %s", type.getSimpleName());
                 System.out.println(message);
                 throw new IllegalStateException(message);
             }
 
-            if (providers.size() > 1) {
-                String message = "Found multiple service providers for %s%n%s".formatted(type.getSimpleName(),
-                        providers.stream()
-                                .map(provider -> provider.type().getSimpleName())
-                                .map(s -> " - " + s)
-                                .toList()
-                                .toString());
+            if (names.size() > 1) {
+                String message = String.format("Found multiple service providers for %s%n%s", type.getSimpleName(), names);
                 System.out.println(message);
                 throw new IllegalStateException(message);
             }
 
-            return providers.get(0).get();
+            return value;
         }));
     }
 
